--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,9 +42,12 @@
         <provider android:authorities="com.facebook.app.FacebookContentProvider1482889325358941"
             android:name="com.facebook.FacebookContentProvider"
             android:exported="true"/>
+        <service android:name="com.paypal.android.sdk.payments.PayPalService"
+            android:exported="false"/>
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 </manifest>
