--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.android.support:cardview-v7:23.0.1'
     compile 'com.android.support:recyclerview-v7:23.0.1'
-    compile 'com.yahoo.mobile.client.android.util.rangeseekbar:rangeseekbar-library:0.1.0'
+    compile 'org.florescu.android.rangeseekbar:rangeseekbar-library:0.3.0'
     compile 'com.prolificinteractive:material-calendarview:0.7.0'
     compile 'com.cloudinary:cloudinary-android:1.2.2'
     compile 'com.wdullaer:materialdatetimepicker:2.1.1'
